<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:orientation="vertical"
    tools:context=".DashboardActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/primaryRed">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/world_map" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="24dp"
            app:subtitle="@string/dashboard_sub_title"
            app:subtitleTextAppearance="@style/dashboardSubTitleText"
            app:title="@string/app_name"
            app:titleTextAppearance="@style/dashboardTitleText"/>

        <ImageButton
            android:id="@+id/btn_show_popup_menu"
            android:src="@drawable/ic_dashboard_menu"
            android:tint="@color/light_grey"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="-20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/dashboard_search_form_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button_add_password"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:tint="@android:color/darker_gray"
                app:srcCompat="@drawable/icon_add" />

            <EditText
                android:id="@+id/text_search_key"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:focusedByDefault="false"
                android:fontFamily="@font/metropolis_light"
                android:hint="@string/hint_find_passwords"
                android:imeOptions="actionSearch"
                android:maxLines="1"
                android:singleLine="true" />

            <ImageButton
                android:id="@+id/button_search_passwords"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:tint="@android:color/darker_gray"
                app:srcCompat="@drawable/icon_search" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <ListView
            android:id="@+id/password_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>