<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_add_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primaryRed">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/bt_close"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:tint="@android:color/white"
                app:srcCompat="@drawable/ic_close" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/manage_password"
                android:textAppearance="@style/dashboardTitleText"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button_save_password"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/metropolis_light"
                android:gravity="center"
                android:paddingLeft="@dimen/spacing_xsmall"
                android:paddingRight="@dimen/spacing_xsmall"
                android:text="@string/SAVE"
                android:textColor="@android:color/white"
                android:visibility="gone" />


            <Button
                android:id="@+id/button_edit_password"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/metropolis_light"
                android:gravity="center"
                android:paddingLeft="@dimen/spacing_xsmall"
                android:paddingRight="@dimen/spacing_xsmall"
                android:text="@string/EDIT"
                android:textColor="@android:color/white"
                android:visibility="visible" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:scrollingCache="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/password_edit_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_large">


                    <EditText
                        android:id="@+id/form_txt_title"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_rounded"
                        android:fontFamily="@font/metropolis_light"
                        android:hint="Title"
                        android:inputType="text"
                        android:padding="8dp" />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_large" />

                    <EditText
                        android:id="@+id/form_txt_username"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_rounded"
                        android:fontFamily="@font/metropolis_light"
                        android:hint="Username"
                        android:inputType="text"
                        android:padding="8dp" />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_large" />

                    <EditText
                        android:id="@+id/form_txt_password"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_rounded"
                        android:fontFamily="@font/metropolis_light"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:padding="8dp" />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_large" />

                    <EditText
                        android:id="@+id/form_txt_website"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_rounded"
                        android:fontFamily="@font/metropolis_light"
                        android:hint="Website"
                        android:inputType="textUri"
                        android:padding="8dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_large" />

                    <EditText
                        android:id="@+id/form_txt_notes"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:background="@drawable/edit_text_rounded"
                        android:fontFamily="@font/metropolis_light"
                        android:hint="Notes"
                        android:inputType="textMultiLine"
                        android:lines="5"
                        android:padding="8dp" />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_large"
                        android:background="@android:color/transparent" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/button_toggle_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/button_gray"
                            android:elevation="5dp"
                            android:fontFamily="@font/metropolis_light"
                            android:padding="15sp"
                            android:text="Show Password"
                            android:textAllCaps="false"
                            android:textColor="@android:color/white"
                            android:textSize="14sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:paddingTop="10dp">

                            <Button
                                android:id="@+id/button_generate_password"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/button_primary_dark"
                                android:elevation="8dp"
                                android:fontFamily="@font/metropolis_light"
                                android:padding="5sp"
                                android:text="Generate Password"
                                android:textAllCaps="false"
                                android:textColor="@android:color/white"
                                android:textSize="14dp" />

                            <View
                                android:layout_width="10dp"
                                android:layout_height="match_parent" />

                            <Button
                                android:id="@+id/button_cancel_edit"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/button_gray"
                                android:elevation="5dp"
                                android:fontFamily="@font/metropolis_light"
                                android:text="Cancel"
                                android:textAllCaps="false"
                                android:textColor="@android:color/white"
                                android:textSize="14sp" />


                        </LinearLayout>


                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/password_detail_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="0dp"
                        android:textSize="16sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_bold"
                        android:text="Title" />

                    <TextView
                        android:id="@+id/text_title"
                        android:layout_width="0dp"
                        android:textSize="14sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/metropolis_light"
                        android:text="Title" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:fontFamily="@font/roboto_bold"
                        android:text="User name" />

                    <TextView
                        android:id="@+id/text_username"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textSize="14sp"
                        android:fontFamily="@font/metropolis_light"
                        android:text="User name" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:fontFamily="@font/roboto_bold"
                        android:text="Password" />

                    <TextView
                        android:id="@+id/text_password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/metropolis_light"
                        android:text="Password" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:fontFamily="@font/roboto_bold"
                        android:text="Website" />

                    <TextView
                        android:id="@+id/text_website"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textSize="14sp"
                        android:fontFamily="@font/metropolis_light"
                        android:text="website" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="0dp"
                        android:textSize="16sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_bold"
                        android:text="Description" />

                    <TextView
                        android:id="@+id/text_description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textSize="14sp"
                        android:fontFamily="@font/metropolis_light"
                        android:text="@string/lorem" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>